# Agentic_prototypes_MCP_Langchain_Adk

./: Chatbot_UI.py  Langchain_adapter_mcp  Langchain_adapter_mcp.py  Mcp_use.py  README.md  a2a_quickstart.ipynb  create_notebook.py  mcp_server_config.json
A2A/Motivational_Agent/: Readme.md  agent.py  mcp_server_config.json  motivational_quotes_mcp_server.py
A2A/Travel_Agent/: agent.py  stateful_session.py
UI/: Chatbot_UI.py
ai_company_workflow/: README.md  a2a_client.py  agents.py  generic_langgraph_executor.py  langgraph_agent_executor.py  langgraph_data_processor.py  langgraph_data_processor_server.py  langgraph_server_utils.py  main_orchestrator.py  pyproject.toml  requirements.txt  server_utils.py  simple_orchestrator.py  test_langgraph_agent.py  test_langgraph_utils.py
pilot_agent/: agent.py
